cluster/apps/argocd/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    hajimari.io/appName: ArgoCD
    hajimari.io/enable: "true"
    hajimari.io/icon: robot
    meta.helm.sh/release-name: argocd
    meta.helm.sh/release-namespace: argocd
  generation: 1
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/instance: argocd
    app.kubernetes.io/name: argocd-server
    app.kubernetes.io/part-of: argocd
  name: argocd-server
  namespace: argocd
spec:
  ingressClassName: nginx
  rules:
  # yamllint disable-line rule:indentation
  - host: "argocd.${SECRET_DOMAIN}"
    http:
      paths:
      # yamllint disable-line rule:indentation
      - backend:
          service:
            name: argocd-server
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  # yamllint disable-line rule:indentation
  - hosts:
    # yamllint disable-line rule:indentation
    - "argocd.${SECRET_DOMAIN}"
    secretName: argocd-tls-certificate
